Refactor for multipackage

--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -39,9 +39,6 @@ jobs:
       id: detect-platform
       run: |
         CHANGED_FILES=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --name-only)
-        if [ -z $CHANGED_FILES ]; then
-          echo "No changes detected"
-        fi
         for FILE in $CHANGED_FILES; do
           if [[ $FILE == package_build_list_host_* ]]; then
             PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
@@ -59,26 +56,42 @@ jobs:
                 OS_RUNNER="windows-latest" # default
                 ;;
             esac
-            COMMAND=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 --exit-code -a --no-prefix | egrep "^\+" | grep Scripts | cut -d'"' -f4)
-            echo "::set-output name=matrix::[\"$OS_RUNNER\"]"
-            echo "::set-output name=command::$COMMAND"
-            break
+            DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 --exit-code -a --no-prefix | egrep "^\+" | grep Scripts)
+            PACKAGE=$(echo $DIFF | cut -d'"' -f2)
+            COMMAND=$(echo $DIFF | cut -d'"' -f4)
+            
+            
+            JSON="{\"include\":["
+            JSONline="(\"package\":\"$PACKAGE"\, \"command\": \"$COMMAND"\, \"os\": \"$OS_RUNNER"\)
+            if [[ "$JSON" != *"$JSONline"* ]]; then
+              JSON="$JSON$JSONline"
+            fi
+
+            # Remove last "," and add closing brackets
+            if [[ $JSON == *, ]]; then
+              JSON="${JSON%?}"
+            fi
+            JSON="$JSON]}"
+            echo $JSON
+  
+            # Set output
+            echo "matrix=$( echo "$JSON" )" >> $GITHUB_OUTPUT
           fi
         done
 
   run-on-specific-os:
+    name: Build "${{ matrix.package }}" on "${{ matrix.os }}"
     needs: detect-changes
-    runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        os: ${{fromJson(needs.detect-changes.outputs.matrix)}}
+      matrix: ${{fromJson(needs.detect-changes.outputs.matrix)}}
+    runs-on: ${{ matrix.os }}
+    
     steps:
-      
     - name: Checkout 3P source repo
       uses: actions/checkout@v3
 
     - name: Run detected command
       run: |
-        ${{ needs.detect-changes.outputs.command }}
+        ${{ matrix.command }}
           
       
