--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -26,8 +26,7 @@ jobs:
   detect-changes:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      command: ${{ steps.detect-platform.outputs.command }}
+      matrix: ${{ steps.detect-platform.outputs.matrix }}
     
     steps:
     - name: Checkout 3P source repo
@@ -41,7 +40,6 @@ jobs:
         CHANGED_FILES=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --name-only)
         JSON="{\"include\":["
         for FILE in $CHANGED_FILES; do
-        	echo $FILE
         	if [[ $FILE == package_build_list_host_* ]]; then
         		PLATFORM=$(echo $FILE | sed -n 's/package_build_list_host_\(.*\).json/\1/p')
         		case $PLATFORM in
@@ -60,12 +58,10 @@ jobs:
         		esac
         
         		DIFF=$(git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --no-ext-diff --unified=0 --exit-code -a --no-prefix -- $FILE | egrep "^\+" | grep Scripts)
-        		echo $DIFF
         		PACKAGE=$(echo $DIFF | cut -d'"' -f2)
         		COMMAND=$(echo $DIFF | cut -d'"' -f4)
         
         		JSONline="{\"package\": \"$PACKAGE\", \"command\": \"$COMMAND\", \"os\": \"$OS_RUNNER\"},"
-        		echo $JSONline
         		if [[ "$JSON" != *"$JSONline"* ]]; then
         			JSON="$JSON$JSONline"
         		fi
@@ -93,7 +89,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v3
 
-    - name: Run detected command
+    - name: Run build command
       run: |
         ${{ matrix.command }}
           
