--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -32,6 +32,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
+        ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 10
 
     - name: Detect platform and command from JSON changes
@@ -88,6 +89,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
+        ref: ${{ github.event.pull_request.head.sha }}
         path: 3p-package-source
     
     - name: Checkout 3P scripts repo
