--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -88,6 +88,7 @@ jobs:
     - name: Checkout 3P source repo
       uses: actions/checkout@v4
       with:
+        ref: ${{ github.event.pull_request.head.sha }}
         path: 3p-package-source
     
     - name: Checkout 3P scripts repo
