--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -81,6 +81,7 @@ jobs:
     name: Build "${{ matrix.package }}" on "${{ matrix.os }}"
     needs: detect-changes
     strategy:
+      fail-fast: false
       matrix: ${{fromJson(needs.detect-changes.outputs.matrix)}}
     runs-on: ${{ matrix.os }}
     
