--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -47,7 +47,7 @@ jobs:
         			OS_RUNNER="ubuntu-latest"
         			;;
         		windows)
-        			OS_RUNNER="windows-latest"
+        			OS_RUNNER="windows-2019"
         			;;
         		darwin)
         			OS_RUNNER="macos-latest"
@@ -107,8 +107,6 @@ jobs:
     - name: Update msbuild path
       if: runner.os == 'Windows'
       uses: ilammy/msvc-dev-cmd@v1.12.0
-      with:
-        vsversion: 2019 
 
     - name: Run build command
       if: ${{ !contains(matrix.package, 'aarch64') }}
@@ -131,7 +129,7 @@ jobs:
         shell: /bin/sh
         install: |
           apt-get update
-          apt-get install -y build-essential libssl-dev libffi-dev ninja python3 python3-pip software-properties-common
+          apt-get install -y build-essential libssl-dev libffi-dev ninja-build python3 python3-pip software-properties-common
           python -m pip install boto3 certifi
           
         run: |
