--- a/.github/workflows/build-pr-packages.yaml
+++ b/.github/workflows/build-pr-packages.yaml
@@ -137,7 +137,7 @@ jobs:
         shell: /bin/sh
         install: |
           apt-get update
-          apt-get install -y build-essential libssl-dev libffi-dev ninja-build python3 python3-pip software-properties-common
+          apt-get install -y build-essential cmake libssl-dev libffi-dev ninja-build python3 python3-pip software-properties-common
           python3 -m pip install boto3 certifi  
         run: |
           python3 /3p-package-scripts/o3de_package_scripts/build_package.py --search_path /3p-package-source/ --output_folder /packages ${{ matrix.package }}
